# Bastet

./: .env.example  .example.gitlab-ci.yml  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.cicd.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/: action.yaml
.github/workflows/: deployment.yml
cli/: check.py  main.py
cli/commands/evaluate/: eval.py  (+1 more)
cli/evaluate/: __init__.py  eval.py
cli/http_client/: __init__.py
cli/import_workflow/: __init__.py
cli/init/: import_workflow.py
cli/models/: audit_report.py
cli/scan/: __init__.py  scan.py
dataset/: README.md  dataset.csv
dataset/scan_queue/: example.sol
dataset/source_code/: 2022-04-backd-CvxCrvRewardsLocker.sol  2022-05-rubicon-RubiconRouter.sol  2023-02-blueberry-IchiVaultSpell.sol  2023-02-gmx-DecreaseOrderUtils.sol  2023-04-blueberry-ConvexSpell.sol  2023-05-maia-ERC4626DepositOnly.sol  2023-06-real-wagmi-Multipool.sol  2023-07-blueberry-AuraSpell.sol  AccessControl.sol  AccessControlDefaultAdminRules.sol  AccessManaged.sol  Address.sol  Calldata.sol  Clones.sol  ERC1155.sol  ERC2771Context.sol  ERC4626.sol  ERC721.sol  IAccessControlEnumerable.sol  IERC2981.sol  Pausable.sol  ProxyAdmin.sol  V4Router.sol  VestingWallet.sol  etherscan-0x1a2eb478fa07125c9935a77b3c03a82470801e30-AminoToken.sol  optimistic-0x129fb07d534c80025ba3e3ff9cb4f5455458afb4-Swap.sol  polygonscan-0xb0fbc2811496849094103e0def6e5a68b71bc8f3-DolzSwap.sol
eval/: Readme.md  dataset.csv  main.ipynb  pyproject.toml
eval/source_code/: 2021-11-malt-UniswapHandler.sol  2021-11-vader-VaderRouterV2.sol  CompoundTimelock.sol  Create2.sol  Governor.sol  TimelockController.sol  draft-ERC6909.sol  optimistic-0xd582226b586ab06f3bf9353f0f2b8618a3544719-Swap.sol
init/: 01-n8n.sql
n8n/: .env.example  docker-compose.yml
n8n/scripts/: README.md  pyproject.toml  scan.py
n8n/workflows/: 4naly3er.json  Chainlink.json  ERC4626.json  example.json  main-workflow.json  slippage_minAmount.json
n8n_workflow/: 4naly3er.json  COT.json  Chainlink.json  Denial_of_Service.json  Lending.json  OWASP2025.json  Slippage.json  access_control.json  chainlink.json  denial_of_service.json  erc4626.json  main_workflow.json  owasp2025.json  slippage.json  slippage_minAmount.json  slippage_min_amount.json
scripts/: import-workflow.py  scan.py  test.py
(+95 files in other folders)
