[project]
name = "bastet"
version = "0.1.0"
description = ""
authors = [
    {name = "OneSavie Lab"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "black (>=25.1.0,<26.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
colorama = "^0.4.6"