[project]
name = "bastet-evaluation"
version = "0.1.0"
description = "a tool to check the methodology performance of n8n result in bastet"
authors = [
    {name = "Chengyu Liou",email = "chengyu.liou@onedegree.hk"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.11 <=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
